# deploy-baba

./: .dockerignore  .env.example  .gitignore  .mcp-rs.toml  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN.md  README.md  complementary_array.ts  cover_letter.html  deploy-baba.db.corrupt  dev  justfile  mcp-audit.jsonl
crates/api-openapi/: Cargo.toml  README.md
crates/api-openapi/src/: apidoc.rs  filter.rs  lib.rs  registry.rs
crates/api-openapi/src/models/: about.rs  admin.rs  ask.rs  auth.rs  challenges.rs  common.rs  contact.rs  crates.rs  demo.rs  health.rs  legal.rs  linkedin.rs  metrics.rs  mod.rs  portfolio.rs  resume.rs  social.rs  stack.rs  tailor.rs
crates/api-openapi/tests/: e2e.rs  integration.rs
crates/api-openapi/tests/e2e/: admin_spec.rs  coverage.rs  public_spec.rs
crates/api-openapi/tests/integration/: about.rs  admin.rs  competencies.rs  contact.rs  demo.rs  health.rs  jobs.rs  registry.rs  social.rs
crates/config-json/: Cargo.toml  README.md
crates/config-json/src/: lib.rs
crates/config-json/tests/: integration.rs
crates/config-toml/: Cargo.toml  README.md
crates/config-toml/src/: lib.rs
crates/config-toml/tests/: integration.rs
crates/config-yaml/: Cargo.toml  README.md
crates/config-yaml/src/: lib.rs
crates/config-yaml/tests/: integration.rs
crates/infra-types/: Cargo.toml  README.md
crates/infra-types/tests/: integration.rs
crates/llm-core/: Cargo.toml  README.md
crates/llm-core/src/: agent_loop.rs  error.rs  grounding.rs  lib.rs  testing.rs  tool_executor.rs  types.rs
crates/llm-openai/: Cargo.toml  README.md
crates/llm-openai/src/: lib.rs
crates/llm-openai/tests/: integration.rs
crates/mcp-rs/: Cargo.toml  mcp-rs.example.toml
crates/mcp-rs/src/: audit.rs  config.rs  error.rs  lib.rs  main.rs  policy.rs  protocol.rs  registry.rs  resource.rs  server.rs  tool.rs  workspace.rs
crates/mcp-rs/src/docs/: README.md
crates/mcp-rs/src/docs/ai/: mcp-prompt-template.md  mcp-real-integrations.md  mcp-review-readme.md  mcp-rs_enhancement_plan_7ca22e97.plan.md  mcp_tools_implementation_6bf8a2a1.plan.md
crates/mcp-rs/src/tools/: cargo_build.rs  cargo_check.rs  cargo_test.rs  check_command.rs  file_read.rs  file_stats.rs  find_files.rs  grep.rs  grep_project.rs  health.rs  hello.rs  json_query.rs  just_run.rs  list_dir.rs  markdown_query.rs  migration_list.rs  read_env.rs  read_toml.rs  sqlite_query.rs  sqlite_schema.rs  system_info.rs  workspace_info.rs
crates/portfolio-rag-mcp/: Cargo.toml
crates/portfolio-rag-mcp/src/: main.rs  rag.rs  tools.rs
crates/rag-core/: Cargo.toml
crates/rag-core/src/: error.rs  eval.rs  hybrid.rs  lib.rs  portfolio.rs  types.rs
crates/rag-core/src/chunk/: claude_cache.rs  hcl.rs  markdown.rs  mod.rs  openapi.rs  portfolio.rs  python.rs  rust.rs  typescript.rs
crates/rag-sqlite/: Cargo.toml
crates/rag-sqlite/src/: embed_bridge.rs  lib.rs  migration.sql
crates/service-protocol/: Cargo.toml
crates/service-protocol/src/: lib.rs  routing.rs
services/admin/: Cargo.toml
services/admin/src/: main.rs  router.rs
services/admin/src/handlers/: jobs.rs
services/agent/: pyproject.toml
services/agent/src/: handler.py  linkedin_oauth.py  models.py
services/agent/src/agent/: __init__.py  agent.py  graph.py  preground.py  rag_sync.py  state.py
services/agent/src/agent/tools/: pdf.py  (+8 more)
services/agent/tests/: conftest.py  test_graph.py  test_linkedin_oauth.py  test_tools.py
services/auth/: Cargo.toml
services/auth/src/: cognito.rs  error.rs  main.rs  routes.rs  state.rs
services/contact/: Cargo.toml
services/contact/src/: main.rs  router.rs
services/contact/src/handlers/: challenge.rs  contact.rs  mod.rs
services/email/: Cargo.toml
services/email/src/: main.rs
services/llm-proxy/: Cargo.toml
services/llm-proxy/src/: main.rs  tool_executor.rs  tools.rs
services/mcp-gateway/: Cargo.toml
services/mcp-gateway/src/: main.rs
services/pdf/: Dockerfile  pyproject.toml
services/pdf/src/: converter.py  handler.py
services/pdf/tests/: test_converter.py
services/ui/: Cargo.toml
services/ui/migrations/: 007_seed_personal_projects.sql  008_create_about_sections.sql  009_seed_about_sections.sql  010_create_social_links.sql  011_seed_social_links.sql  012_update_about_sections.sql  013_align_linkedin_profile.sql  014_add_sync_unique_indexes.sql  015_sync_dashboard_2026-04-09.sql  016_sync_dashboard_2026-04-10.sql  018_resume_ai_positioning.sql  019_add_me_summary.sql  020_fix_me_summary_content.sql  021_update_competencies.sql  022_create_challenges.sql  023_rag_eval.sql  024_resume_cleanup.sql  025_resume_content_polish.sql  026_metrics_tables.sql  027_outcome_focused_descriptions.sql  028_resume_consolidation.sql  029_rag_embeddings.sql  030_challenge_rag_shape.sql  031_rag_eval_v2.sql  032_create_linkedin_sync.sql  033_create_legal_documents.sql  034_seed_legal_documents.sql  035_linkedin_oauth_tokens.sql  036_change_tracking.sql  037_sync_dashboard_2026-06-04.sql
services/ui/src/: auth.rs  db.rs  lib.rs  main.rs  middleware.rs  openapi.rs  router.rs  state.rs  sync.rs  telemetry.rs
services/ui/src/routes/: about.rs  ask.rs  auth.rs  contact.rs  dashboard.rs  health.rs  mod.rs  resume.rs
services/ui/src/tailor/: generator.rs  matcher.rs  mod.rs  parser.rs
services/ui/templates/: about_me.html  about_repo.html  ask.html  base.html  contact.html  dashboard.html  dashboard_about_detail.html  dashboard_about_list.html  dashboard_competencies_list.html  dashboard_competency_detail.html  dashboard_home.html  dashboard_job_detail.html  dashboard_jobs_list.html  dashboard_social_link_detail.html  dashboard_social_links_list.html  resume.html
services/ui/tests/: api_smoke.rs  contact_smoke.rs  health.rs
xtask/: Cargo.toml
xtask/src/: cache.rs  coverage.rs  main.rs  rag.rs  secret.rs
xtask/src/database/: backup.rs  mod.rs  restore.rs
xtask/src/deploy/: lambda.rs  mod.rs  spa.rs
xtask/src/infra/: mod.rs  tofu.rs
xtask/src/release/: changelog.rs  git.rs  mod.rs  version.rs
xtask/src/resume/: generate.rs  mod.rs  upload.rs
(+307 files in other folders)
