[workspace]
resolver = "2"
members = [
    "crates/llm-core",
    "crates/llm-anthropic",
    "crates/rag-core",
    "crates/rag-sqlite",
    "crates/config-core",
    "crates/config-toml",
    "crates/config-yaml",
    "crates/config-json",
    "crates/api-core",
    "crates/api-openapi",
    "crates/api-graphql",
    "crates/api-grpc",
    "crates/api-merger",
    "crates/infra-types",
    "services/ui",
    "services/email",
    "xtask",
    "examples/01_multi_format_config",
    "examples/02_api_spec_generation",
    "examples/03_spec_merger",
    "examples/04_infra_types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shantopagla/deploy-baba"
authors = ["shantopagla <it@shantopagla.com>"]
rust-version = "1.94"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

# Async
tokio = { version = "1", features = ["full"] }

# Web
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "set-header"] }
tower = { version = "0.4", features = ["util"] }
base64 = "0.22"

# Lambda
lambda_http = "0.13"
lambda_runtime = "0.13"

# Templates
askama = "0.12"
askama_axum = "0.4"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-rapidoc = "4"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# AWS SDK
# default-features disabled to exclude the legacy `rustls` feature (-> rustls 0.21 / rustls-webpki 0.101),
# keeping only the modern default-https-client path (-> rustls 0.23 / rustls-webpki 0.103).
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1", default-features = false, features = ["sigv4a", "default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-sdk-lambda = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ecs = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ecr = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-efs = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-dynamodb = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sesv2 = { version = "1", default-features = false, features = ["behavior-version-latest", "sigv4a", "default-https-client", "rt-tokio"] }
aws-sdk-secretsmanager = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Compression
flate2 = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Auth
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
walkdir = "2"

# Crypto (PoW)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"

# Internal crates
config-core = { path = "crates/config-core" }
config-toml = { path = "crates/config-toml" }
config-yaml = { path = "crates/config-yaml" }
config-json = { path = "crates/config-json" }
api-core = { path = "crates/api-core" }
api-openapi = { path = "crates/api-openapi" }
api-graphql = { path = "crates/api-graphql" }
api-grpc = { path = "crates/api-grpc" }
api-merger = { path = "crates/api-merger" }
infra-types = { path = "crates/infra-types" }
llm-core = { path = "crates/llm-core" }
llm-anthropic = { path = "crates/llm-anthropic" }
rag-core = { path = "crates/rag-core" }
rag-sqlite = { path = "crates/rag-sqlite" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
