[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = { workspace = true }

# Database
rusqlite = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sdk-ssm = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-sdk-ecs = { workspace = true }
aws-sdk-ecr = { workspace = true }
aws-sdk-efs = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
