[package]
name = "api-openapi"
description = "OpenAPI 3.0 specification generator implementing api-core traits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
api-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }

[[bin]]
name = "emit-spec"
path = "src/bin/emit_spec.rs"

[dev-dependencies]
jsonschema = "0.18"
