[package]
name = "infra-types"
description = "Cloud-agnostic infrastructure type definitions with SQLite + S3 backup support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
config = ["config-core"]

[dependencies.config-core]
workspace = true
optional = true

[dev-dependencies]
toml = { workspace = true }
