[package]
name = "portfolio-rag-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for portfolio RAG system integration"

[[bin]]
name = "portfolio-rag-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RAG infrastructure
rag-core = { path = "../rag-core" }
rag-sqlite = { path = "../rag-sqlite" }

# Database dependencies
rusqlite = { version = "0.32", features = ["bundled"] }
