[package]
name = "rag-sqlite"
description = "SQLite + FTS5 retrieval backend for the deploy-baba RAG pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rag-core = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
