[package]
name = "rag-sqlite"
description = "SQLite + FTS5 retrieval backend for the deploy-baba RAG pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = []
llm-bridge = ["dep:llm-core"]

[dependencies]
rag-core = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }
llm-core = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
