[package]
name = "service-protocol"
description = "Typed inter-service request/response protocol for Lambda microservices"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
axum = ["dep:axum", "dep:anyhow"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
