[package]
name = "admin-lambda"
description = "Admin dashboard service — CRUD for all entities, migration owner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

rusqlite = { workspace = true }

# Internal crates
service-protocol = { path = "../../crates/service-protocol" }
api-openapi = { path = "../../crates/api-openapi" }
