[project]
name = "deploy-baba-agent"
version = "0.1.0"
description = "PydanticAI agentic service for sislam.com — cover letter generation and portfolio actions"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=0.2",
    "anthropic>=0.45",
    "fastapi>=0.115",
    "mangum>=0.19",
    "uvicorn>=0.34",
    "boto3>=1.35",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "moto[s3,secretsmanager]>=5.0",
    "ruff>=0.8",
    "mypy>=1.14",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "moto[s3,secretsmanager]>=5.0",
    "ruff>=0.8",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/handler.py", "src/models.py"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["boto3", "botocore", "botocore.*", "pydantic_ai", "pydantic_ai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
