[package]
name = "auth-lambda"
description = "Cognito IDP proxy Lambda — custom login flow for SPA"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

aws-config = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
