[package]
name = "llm-proxy"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
api-openapi = { workspace = true }
llm-anthropic = { workspace = true }
llm-core = { workspace = true }
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
lambda_runtime = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
