[package]
name = "deploy-baba-ui"
description = "Portfolio site and live API demo for deploy-baba"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Internal crates — live demo
config-core = { workspace = true }
config-toml = { workspace = true }
config-yaml = { workspace = true }
config-json = { workspace = true }
api-core = { workspace = true }
api-openapi = { workspace = true }
api-merger = { workspace = true }
infra-types = { workspace = true }
rag-core = { workspace = true }
rag-sqlite = { workspace = true, features = ["llm-bridge"] }
llm-core = { workspace = true }
llm-anthropic = { workspace = true }
llm-openai = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
lambda_http = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

# OpenAPI
utoipa = { workspace = true }


# Serialization + error handling
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# AWS
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
flate2 = { workspace = true }

# SPA dispatch / HTTP adapter for Lambda runtime
lambda_runtime = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }

# Crypto (PoW)
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
tempfile = "3"
